hphp/hack/test/typecheck/async_hint2.php.exp
File "async_hint2.php", line 5, characters 39-41:
Was expecting an `Awaitable` return type hint (Typing[4174])
