hphp/hack/test/typecheck/async_hint2.php
<?hh

class Foo {
  // Testing method
  public async function wrong_hint(): int {
    throw new Exception();
  }
}
